2007-05-25  Christopher Wellons  <ccw129@psu.edu>

	* unbini.c: Fixed a bug where specifying both modes: do nothing
	and summarize resulted in a crash.

2007-05-18  Christopher Wellons  <ccw129@psu.edu>

	* configure.ac: Removed unneeded libintl.h check from configure.

	* unbini.c: Removed mmap() implementation. All input is now
	regular file input and output. This should greatly simplify
	unbini.c code.

	* unbini.c: Added stdin and stdout to unbini.

	* parse.y, convert.c: Added stdin and stdout options to bini.

	* Makefile.am: Added parse.g to EXTRA_DIST. The test suite is now
	fully working with 'make distcheck'.

2007-05-17  Christopher Wellons  <ccw129@psu.edu>

	* Makefile.am: Added test suite.

	* all: switched to types with explicit widths (uint32_t etc)

2007-05-16  Christopher Wellons  <ccw129@psu.edu>

	* all: converted project to the GNU build system (autoconf,
	automake, autoheader, etc)

	* parse.y: yyerror() now describes the current filename when
	reporting errors

	* scan.l: moved comment priority down in the scanner

	* NEWS, ChangeLog, BUGS, AUTHORS, COPYING, COPYRIGHT: I
	initilalized all of these files.

	* README, HACKING: I wrote up all of the documentation into these
	two files.
